--- a/src/components/MailListItem.css
+++ b/src/components/MailListItem.css
@@ -5,7 +5,6 @@
   height: 50px;
   border-bottom: 1px solid whitesmoke;
   cursor: pointer;
-  z-index: 999;
 }
 
 .emailRow:hover {
@@ -54,4 +53,8 @@
 
 .emailRow_options {
   min-width: 140px;
+}
+
+.readMark {
+  background-color: rgba(0, 0, 0, 0.05);
 }
