--- a/src/components/MailPage.css
+++ b/src/components/MailPage.css
@@ -5,14 +5,17 @@
 
 .mail_tools{
     display: flex;
+    
     justify-content: space-between;
     background-color: white;
 }
 
 .mail_body{
     margin: 18px;
+    padding: 30px;
     background-color: white;
     box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.25);
+    min-height: 700px;
 }
 
 .mail_bodyHeader{
@@ -26,7 +29,7 @@
 
 .mail_time{
     position: absolute;
-    right: 25px;
+    right: 40px;
 }
 
 .mail_message{
