adding undo send mail

--- a/src/components/ComposeMail.css
+++ b/src/components/ComposeMail.css
@@ -1,7 +1,7 @@
 .sendMail {
-  position: absolute;
-  right: 20px;
-  background-color: #404040;
+  position: fixed;
+  right: 30px;
+  z-index: 999;
   bottom: 0px;
   border-radius: 5px;
   box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.25);
@@ -10,21 +10,36 @@
   height: 600px;
   flex-direction: column;
   display: flex;
+  background-color: white;
+}
+
+.minimize {
+  width: 300px;
+  height: 50px;
 }
 
 .sendMail_header {
   color: whitesmoke;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding-left: 10px;
   font-size: 13px;
+  background-color: #404040;
 }
 
 .sendMail_close {
-  position: absolute;
-  right: 5px;
   color: whitesmoke;
   cursor: pointer;
+}
+
+.BN {
+  position: absolute;
+  right: 5px;
+}
+
+.my:hover{
+  background-color: #737373 !important; 
+  border-radius: 0%;
 }
 
 .sendMail > form {
@@ -33,13 +48,18 @@
   flex: 1;
 }
 
+.tox-tinymce{
+  flex: 1;
+}
+
 .sendMail > form > input {
   border: none;
   height: 30px;
+  margin: 5px;
   padding: 5px;
   border-bottom: 1px solid whitesmoke;
   outline: none;
-  font-size: 13px;
+  font-size: 20px;
 }
 
 .sendMail_message {
@@ -47,8 +67,8 @@
 }
 
 .sendMail_options {
-  margin: 10px;
-  color: gray;
+  padding: 8px;
+  background-color: rgb(255, 255, 255);
 }
 
 .sendMail_send {
