--- a/src/components/MailListItem.css
+++ b/src/components/MailListItem.css
@@ -1,59 +1,72 @@
 .emailRow {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 50px;
+  height: 60px;
   border-bottom: 1px solid whitesmoke;
   cursor: pointer;
 }
 
 .emailRow:hover {
-  border-top: 1px solid white;
+ 
   box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.24);
 }
 
 .emailRow_title {
-  font-size: 13px;
-  flex: 0.1;
-  font-weight: bold;
+  min-width: 350px;
+  flex-basis: 350px;
+  font-size:  .9rem;
   padding-right: 10px;
+  white-space: nowrap;
 }
 
 .emailRow_message {
-  flex: 0.8;
+  flex: 1;
   align-items: center;
-  font-size: 13px;
+  font-size:  .9rem;
   display: flex;
+  max-width: 50vw;
 }
 
 .emailRow_message h4 {
-  width: 400px;
+  font-size:  .9rem;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: flex;
+  
+ 
+
+  
 }
 
 .emailRow_description {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-weight: lighter;
   padding-left: 4px;
   color: gray;
+  
+
 }
 
 .emailRow_time {
   font-size: 13px;
-  flex: 0.1;
-  font-weight: bold;
+  font-weight: bold; 
+  min-width: 105px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.emailRow_time h4 {
   margin-right: 20px;
 }
 
 .clickable {
+  align-items: center;
   display: flex;
-  flex: auto;
+  flex: 1;
 }
 
 .emailRow_options {
-  min-width: 140px;
+  min-width: 105px;
 }
 
 .readMark {
