--- a/src/components/MailPage.css
+++ b/src/components/MailPage.css
@@ -15,7 +15,7 @@
     padding: 30px;
     background-color: white;
     box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.25);
-    min-height: 700px;
+    min-height: 80vh;
 }
 
 .mail_bodyHeader{
